<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.PaymentSummaryActivity">

    <com.vipulasri.ticketview.TicketView
        android:id="@+id/ticketView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:ticketCornerType="rounded"
        app:ticketDividerPadding="0dp"
        app:ticketDividerType="dash"
        app:ticketElevation="14dp"
        app:ticketOrientation="horizontal"
        app:ticketScallopPositionPercent="45"
        app:ticketScallopRadius="16dp"
        app:ticketShowBorder="false"
        app:ticketShowDivider="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintEnd_toEndOf="@+id/ticketView"
        app:layout_constraintStart_toStartOf="@+id/ticketView"
        app:layout_constraintTop_toTopOf="@+id/ticketView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pembayaran_berhasil"
        android:textColor="#4cd080"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ticketView"
        app:layout_constraintStart_toStartOf="@+id/ticketView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/id_trans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_000_123_456"
        android:textStyle="bold"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/ticketView"
        app:layout_constraintStart_toStartOf="@+id/ticketView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_000_123_456"
        android:textStyle="bold"
        android:textSize="12sp"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/ticketView"
        app:layout_constraintStart_toStartOf="@+id/ticketView"
        app:layout_constraintTop_toBottomOf="@+id/id_trans" />


    <TextView
        android:id="@+id/lbl_merchant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nama_merchant"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lbltotal_bayar"
        app:layout_constraintStart_toStartOf="@+id/ticketView" />

    <TextView
        android:id="@+id/merchant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/_000_123_456"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_merchant"
        app:layout_constraintEnd_toEndOf="@+id/ticketView"
        app:layout_constraintTop_toTopOf="@+id/lbl_merchant" />


    <TextView
        android:id="@+id/lbltotal_bayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/total_bayar"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lbl_bank"
        app:layout_constraintStart_toStartOf="@+id/ticketView" />

    <TextView
        android:id="@+id/total_bayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/_000_123_456"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/lbltotal_bayar"
        app:layout_constraintEnd_toEndOf="@+id/ticketView"
        app:layout_constraintTop_toTopOf="@+id/lbltotal_bayar" />

    <TextView
        android:id="@+id/lbl_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/rekening_sumber"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lbl_balance"
        app:layout_constraintStart_toStartOf="@+id/ticketView" />

    <TextView
        android:id="@+id/bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/_000_123_456"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_bank"
        app:layout_constraintEnd_toEndOf="@+id/ticketView"
        app:layout_constraintTop_toTopOf="@+id/lbl_bank" />









    <TextView
        android:id="@+id/lbl_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="64dp"
        android:text="@string/sisa_saldo"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ticketView"
        app:layout_constraintStart_toStartOf="@+id/ticketView" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/_000_123_456"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_balance"
        app:layout_constraintEnd_toEndOf="@+id/ticketView"
        app:layout_constraintTop_toTopOf="@+id/lbl_balance" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutConfirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        android:background="@drawable/button_rounded_style_greeen"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/kembali_ke_menu_utama"
            android:textColor="#ffffff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>